--- a/app/src/main/res/layout/list_item_crime_to_call_the_police.xml
+++ b/app/src/main/res/layout/list_item_crime_to_call_the_police.xml
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_weight="2"
+        android:orientation="vertical"
         android:padding="8dp">
 
         <TextView
@@ -37,11 +37,8 @@
         android:id="@+id/call_police"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Call Police">
-        android:layout_weight="1"
+        android:text="@string/call_police"
+        >
     </Button>
 
-
-
-
-</LinearLayout>
+    </LinearLayout>
