--- a/app/src/main/res/layout/dialog_time.xml
+++ b/app/src/main/res/layout/dialog_time.xml
@@ -3,13 +3,10 @@
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:layout_gravity="center_horizontal">
-    <DatePicker
-        android:id="@+id/dialog_date_picker"
+    <TimePicker
+        android:id="@+id/dialog_time_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"/>
 
 </FrameLayout>
-
-
-
